# data2image

./: .gitignore  Cargo.toml  README.md  build.rs  vercel.json
.github/: dependabot.yml
.github/workflows/: test.yml
api/: handler.rs
src/: compress.rs  lib.rs  render.rs  svg.zst.dict  svg.zstd.dict
