[package]
name = "data2img"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
async-compression = { version = "0.4.28", features = ["brotli", "zstd", "deflate","gzip", "tokio"] }
tokio = { version = "1", features = ["macros"] }
url = "2.5.4"
vercel_runtime = "1.1.6"
base64 = "0.22.1"
reqwest = "0.12.23"
rquickjs = { version = "0.9.0", features = ["futures"] }

[build-dependencies]
reqwest = { version = "0.12.23", features = ["blocking"] }



[[bin]]
name = "handler"
path = "api/handler.rs"

[lib]
path = "src/lib.rs"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
