[package]
name = "data2img"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
async-compression = { version = "0.4.42", features = ["brotli", "zstd", "deflate","gzip", "tokio"] }
tokio = { version = "1", features = ["macros"] }
url = "2.5.8"
vercel_runtime = "2.2.0"
base64 = "0.22.1"
reqwest = "0.13.3"
hyper = "1.9.0"
http-body-util = "0.1.3"
rquickjs = { version = "0.11.0", features = ["futures", "parallel"] }

[build-dependencies]
reqwest = { version = "0.13.3", features = ["blocking"] }



[[bin]]
name = "handler"
path = "api/handler.rs"

[lib]
path = "src/lib.rs"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
